--- a/public/multidrag/index.html
+++ b/public/multidrag/index.html
@@ -68,7 +68,7 @@ v\:* {
 }
   </style>
 
-<script src="js/interact.js"></script>
+<script src="../js/interact.js"></script>
     <style type="text/css">
         #drop_file_zone {
             background-color: #EEE;
